--- a/flowzServer/package.json
+++ b/flowzServer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "rethinkdbdash": "^2.3.31"
