--- a/PDF_Extract/package.json
+++ b/PDF_Extract/package.json
@@ -17,6 +17,8 @@
     "aws-sdk": "^2.188.0",
     "axios": "^0.17.1",
     "iview": "^2.9.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-form-wizard": "^0.8.2",
