--- a/flowzServer/package.json
+++ b/flowzServer/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
+    "json2xls": "^0.1.2",
     "rethinkdbdash": "^2.3.31"
   }
 }
