--- a/flowzServer/package.json
+++ b/flowzServer/package.json
@@ -14,7 +14,12 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
+    "fs": "0.0.1-security",
     "json2xls": "^0.1.2",
-    "rethinkdbdash": "^2.3.31"
+    "lodash": "^4.17.5",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "rethinkdbdash": "^2.3.31",
+    "url": "^0.11.0"
   }
 }
